--- a/Caddyfile
+++ b/Caddyfile
@@ -5,6 +5,7 @@
 imgproxy.local {
     tls {
         dns cloudflare {env.CLOUDFLARE_API_TOKEN}
+        resolvers 1.1.1.1
     }
     reverse_proxy imgproxy:8080
 }
