update Caddy service to build from Dockerfile in compose.yml

--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,9 @@
 services:
 
   caddy:
-    image: caddy:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: unless-stopped
     env_file: .env
     ports:
