--- a/Caddyfile
+++ b/Caddyfile
@@ -2,7 +2,7 @@
 	acme_ca https://acme-staging-v02.api.letsencrypt.org/directory
 }
 
-imgproxy.local {
+imgproxy.sney.eu {
     tls {
         dns cloudflare {env.CLOUDFLARE_API_TOKEN}
         resolvers 1.1.1.1
